[tool.poetry]
name = "itext"
version = "0.1.0"
description = "ISCC Text-Code Research"
authors = ["Titusz Pan <tp@iscc.foundation>", "Dominik Krakau krakau@internet-sicherheit.de"]

[tool.poetry.scripts]
itext = "itext.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
alive-progress = "^2.1.0"
click = "^8.0.3"
loguru = "^0.5.3"
codetiming = "^1.3.0"
jsonlines = "^3.0.0"
orjson = "^3.6.5"

[tool.poetry.dev-dependencies]
black = { version = "^21.12b0", python = "^3.6" }
pytest = "^6.2.5"

[build-system]
requires = ["poetry==1.0.5", "setuptools"]
build-backend = "poetry.core.masonry.api"
